[project]
name = "leashline"
version = "0.1.0"
description = "local-first dog escape detection."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE*"]
dependencies = []

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"